Fix profile collection gap on iOS Safari

--- a/app/assets/stylesheets/profile.css
+++ b/app/assets/stylesheets/profile.css
@@ -172,6 +172,7 @@
 		gap: 0.5rem;
 
 		li {
+			display: block;
 			padding: 0;
 		}
 	}
